Reetan.Nayak Dev 25/force-app/main/default/objects/Student__c/Student__c.object-meta.xml
<CustomObject>
    <label>Student</label>
    <nameField>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>