Reetan.Nayak Dev 25/force-app/main/default/objects/Student__c/fields/BatchId__c.field-meta.xml
<CustomField>
    <fullName>BatchId__c</fullName>
    <label>BatchId</label>
    <referenceTo>Batch__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>