Reetan.Nayak Dev 25/force-app/main/default/objects/Student__c/fields/Certificate_received__c.field-meta.xml
<CustomField>
    <fullName>Certificate_received__c</fullName>
    <label>Certificate Received</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>