Reetan.Nayak Dev 25/force-app/main/default/objects/Student__c/fields/CourseId__c.field-meta.xml
<CustomField>
    <fullName>CourseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CourseId</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>