Reetan.Nayak Dev 25/force-app/main/default/objects/Student__c/fields/Highest_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Highest_Qualification__c</fullName>
    <label>Highest Qualification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MCA</fullName>
            </value>
            <value>
                <fullName>BE(CS/IT)</fullName>
            </value>
            <value>
                <fullName>BTech(CS/IT)</fullName>
            </value>
            <value>
                <fullName>MSc(CS/IT)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>