Reetan.Nayak Dev 25/force-app/main/default/objects/Student__c/fields/Language_known__c.field-meta.xml
<CustomField>
    <fullName>Language_known__c</fullName>
    <label>Language Known</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>Hindi</fullName>
            </value>
            <value>
                <fullName>Oriya</fullName>
            </value>
            <value>
                <fullName>Bengali</fullName>
            </value>
            <value>
                <fullName>Telugu</fullName>
            </value>
            <value>
                <fullName>Marathi</fullName>
            </value>
            <value>
                <fullName>Tamil</fullName>
            </value>
            <value>
                <fullName>Gujarati</fullName>
            </value>
            <value>
                <fullName>Kannada</fullName>
            </value>
            <value>
                <fullName>Malayalam</fullName>
            </value>
            <value>
                <fullName>Punjabi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>