Reetan.Nayak Dev 25/force-app/main/default/objects/Student__c/fields/loginId__c.field-meta.xml
<CustomField>
    <fullName>loginId__c</fullName>
    <label>loginId</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>