Reetan.Nayak Dev 25/force-app/main/default/objects/Student__c/fields/Look_Course__c.field-meta.xml
<CustomField>
    <fullName>Look_Course__c</fullName>
    <label>Look_Course</label>
    <length>45</length>
    <type>Text</type>
</CustomField>