Reetan.Nayak Dev 25/force-app/main/default/objects/Student__c/fields/PaymentType__c.field-meta.xml
<CustomField>
    <fullName>PaymentType__c</fullName>
    <label>PaymentType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Installment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>