Reetan.Nayak Dev 25/force-app/main/default/objects/Student__c/fields/PinCode__c.field-meta.xml
<CustomField>
    <fullName>PinCode__c</fullName>
    <label>PinCode</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>