Reetan.Nayak Dev 25/force-app/main/default/objects/Student__c/fields/Prefered_Time__c.field-meta.xml
<CustomField>
    <fullName>Prefered_Time__c</fullName>
    <label>Prefered Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Morning Time</fullName>
            </value>
            <value>
                <fullName>Evening Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>