Reetan.Nayak Dev 25/force-app/main/default/objects/Student__c/fields/Revaluation_Needed__c.field-meta.xml
<CustomField>
    <fullName>Revaluation_Needed__c</fullName>
    <label>Revaluation Needed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>