Reetan.Nayak Dev 25/force-app/main/default/objects/Student__c/fields/SecuredMark__c.field-meta.xml
<CustomField>
    <fullName>SecuredMark__c</fullName>
    <label>SecuredMark</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>