Reetan.Nayak Dev 25/force-app/main/default/objects/Student__c/fields/SEmail_Id__c.field-meta.xml
<CustomField>
    <fullName>SEmail_Id__c</fullName>
    <label>SEmail Id</label>
    <required>true</required>
    <type>Email</type>
</CustomField>