Reetan.Nayak Dev 25/force-app/main/default/objects/Student__c/fields/St_Mob_No__c.field-meta.xml
<CustomField>
    <fullName>St_Mob_No__c</fullName>
    <label>St Mob No</label>
    <type>Phone</type>
</CustomField>