Reetan.Nayak Dev 25/force-app/main/default/objects/Student__c/fields/States__c.field-meta.xml
<CustomField>
    <fullName>States__c</fullName>
    <label>State</label>
    <length>25</length>
    <type>Text</type>
</CustomField>