Reetan.Nayak Dev 25/force-app/main/default/objects/Student__c/fields/TestName__c.field-meta.xml
<CustomField>
    <fullName>TestName__c</fullName>
    <label>TestName</label>
    <length>15</length>
    <type>Text</type>
</CustomField>