Reetan.Nayak Dev 25/force-app/main/default/objects/Student__c/fields/University__c.field-meta.xml
<CustomField>
    <fullName>University__c</fullName>
    <label>University</label>
    <length>50</length>
    <type>Text</type>
</CustomField>