Reetan.Nayak Dev 25/force-app/main/default/objects/Student__c/fields/Year_Of_Passing__c.field-meta.xml
<CustomField>
    <fullName>Year_Of_Passing__c</fullName>
    <label>Year Of Passing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2007</fullName>
            </value>
            <value>
                <fullName>2008</fullName>
            </value>
            <value>
                <fullName>2009</fullName>
            </value>
            <value>
                <fullName>2010</fullName>
            </value>
            <value>
                <fullName>2011</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>